Update Loading and Visualization of Muon GNSS-R Soil Moisture Products.ipynb
Updated link to paper

--- a/notebooks/Loading and Visualization of Muon GNSS-R Soil Moisture Products.ipynb
+++ b/notebooks/Loading and Visualization of Muon GNSS-R Soil Moisture Products.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Loading and Visualization of Muon GNSS-R Soil Moisture Products\n",
     "\n",
-    "This notebook is a very brief demonstration of how to load and visualize the L2 (aggregated trackwise) and L3 (hourly and daily gridded) soil moisture product files. This notebook assumes the data has been downloaded from the [Zenodo](https://zenodo.org/uploads/14172456) repository. This data is described in detail in the associated manuscript available [here](linktoarxiv)."
+    "This notebook is a very brief demonstration of how to load and visualize the L2 (aggregated trackwise) and L3 (hourly and daily gridded) soil moisture product files. This notebook assumes the data has been downloaded from the [Zenodo](https://zenodo.org/uploads/14172456) repository. This data is described in detail in the associated manuscript available [here](https://arxiv.org/abs/2412.00072)."
    ]
   },
   {
